Stopped using z-index for the most part. Made it so point events fall through a zoomed-in card to allow for better rifling

--- a/source/style/card.scss
+++ b/source/style/card.scss
@@ -56,26 +56,29 @@ $player-color-dark: #102060;
 	box-sizing: border-box;
 	width: $card-width;
 	height: $card-height;
-	z-index: 1;
 }
 
 .card {
 	@extend .card-shape;
-	user-select: none;
-	
 	cursor: pointer;
+	user-select: none;
+	&.-hover .card-content {
+		background-color: #e6ffff;
+		border-color: #002966;
+		box-shadow: 0 0 14px 0 #003399;
+		transform: scale(1.1);
+		z-index: 1;
+	}
+}
+
+.card-content {
+	@extend .fill-parent;
+	pointer-events: none;
+	border-radius: 10px;
 	border: solid 2px black;
 	background-color: white;
 	box-shadow: 0 0 14px 0 #101010;
 	transition: transform 0.05s;
-	
-	&.-hover {
-		background-color: #e6ffff;
-		border-color: #002966;
-		box-shadow: 0 0 14px 0 #003399;
-		z-index: 10;
-		transform: scale(1.1);
-	}
 }
 
 $card-hole-opacity: 0.5;
