--- a/source/style/game.scss
+++ b/source/style/game.scss
@@ -57,7 +57,6 @@ $playarea-margin: 20px;
 #section-input {
 	position: relative;
 	flex-shrink: 0;
-	z-index: 1;
 	overflow: hidden;
 	border-top: solid 1px black;
 	border-radius: 0 0 $curve-log $curve-log;
@@ -159,7 +158,6 @@ $input-expression-button-padding: 6px;
 #input-chat {
 	@extend .input;
 	position: relative;
-	z-index: 2;
 	height: $input-chat-height;
 }
 
@@ -226,7 +224,6 @@ $input-expression-button-padding: 6px;
 
 .section-log-shadow {
 	@extend .fill-parent;
-	z-index: 3;
 	pointer-events: none;
 	border-radius: $curve-log;
 	border: solid 1px black;
